# universal_causal_language

./: AI_LAYER.md  BRAIN_VM.md  Cargo.toml  EXECUTION_MODES.md  FEATURES.md  PRD.txt  PRODUCTION_BRAIN.md  QUICKSTART.md  README.md  ROBOT_VM.md  SHOWCASE.md  SUMMARY.md  TURING_COMPLETE.md  UX_AS_COMPUTATION.md  demo.sh  demo_advanced.sh  demo_ai_layer.sh  demo_recipe.sh  demo_turing_complete.sh  demo_universal.sh  program.rb
examples/: ai_chain.json  ai_generate_factorial.json  biology.json  brain_test.json  confusion_test.json  fibonacci.json  hello_world.json  incomprehensible.json  legal_contract.json  multiply_universal.json  music.json  natural_language.json  parallel_compute.json  recipe_tea.json  ruby_code.json  rust_code.json  simple_calc.json
src/: coordinator.rs  lib.rs  main.rs
src/compiler/: mod.rs  ruby.rs
src/simulator/: ai.rs  brain.rs  mod.rs  robot.rs
tests/: integration_tests.rs
