[package]
name = "ucl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ucl"
path = "src/main.rs"

[lib]
name = "ucl"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"

